Bug 487524. Joining a list to its parent should be a no-op. r+sr=peterv